--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,9 @@ services:
     ports:
       - '8080:8080'
     command: 'npm start'
+    networks:
+      - services
+
+networks:
+  services:
+    external: true
