--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,13 @@
 version: '3.9'
 services:
   node:
-    image: 'node:latest'
-    user: 'node'
-    working_dir: /home/node/app
+    build:
+      context: .
+      dockerfile: Dockerfile
     environment:
       - NODE_ENV=production
-    volumes:
-      - ./:/home/node/app
     ports:
-      - '8080:8080'
-    command: 'npm start'
+      - '8080:3000'
     networks:
       - services
 
